[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/ChatUI.gd" id="1"]
[ext_resource type="Texture2D" path="res://sprites/Captain_Talksprite_1.png" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_overlay"]
bg_color = Color(0, 0, 0, 0.25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialogue"]
bg_color = Color(0, 0, 0, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_input"]
bg_color = Color(0, 0, 0, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_name_bg"]
bg_color = Color(0, 0, 0, 0.8)

[node name="ChatUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BlackOverlay" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_overlay")

[node name="BlurEffect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.5, 0.5, 0.5, 0.3)

[node name="ChatPanel" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NPCTalksprite" type="TextureRect" parent="ChatPanel"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="DialogueBox" type="Panel" parent="ChatPanel"]
anchor_left = 0.02
anchor_top = 0.05
anchor_right = 0.48
anchor_bottom = 0.45
theme_override_styles/panel = SubResource("StyleBoxFlat_dialogue")

[node name="NPCNameBG" type="Panel" parent="ChatPanel/DialogueBox"]
anchor_right = 1.0
anchor_bottom = 0.15
theme_override_styles/panel = SubResource("StyleBoxFlat_name_bg")

[node name="NPCName" type="Label" parent="ChatPanel/DialogueBox/NPCNameBG"]
anchor_left = 0.02
anchor_right = 0.98
anchor_bottom = 1.0
text = "Captain"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
vertical_alignment = 1

[node name="DialogueText" type="RichTextLabel" parent="ChatPanel/DialogueBox"]
anchor_left = 0.03
anchor_top = 0.18
anchor_right = 0.97
anchor_bottom = 0.95
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Ahoy, matey! How're you doin' this here fine evenin'?"
scroll_following = true

[node name="InputBox" type="Panel" parent="ChatPanel"]
anchor_left = 0.02
anchor_top = 0.55
anchor_right = 0.48
anchor_bottom = 0.95
theme_override_styles/panel = SubResource("StyleBoxFlat_input")

[node name="PlayerNameBG" type="Panel" parent="ChatPanel/InputBox"]
anchor_right = 1.0
anchor_bottom = 0.1
theme_override_styles/panel = SubResource("StyleBoxFlat_name_bg")

[node name="PlayerName" type="Label" parent="ChatPanel/InputBox/PlayerNameBG"]
anchor_left = 0.02
anchor_right = 0.98
anchor_bottom = 1.0
text = "Player"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="ChatPanel/InputBox"]
anchor_left = 0.03
anchor_top = 0.12
anchor_right = 0.97
anchor_bottom = 0.25
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
placeholder_text = "Please type your response here..."
caret_blink = true